# sonic-genl-packet

./: Makefile  README.md  WORKSPACE.bazel  install_deps.sh  ppp.BUILD
debian/: changelog  control  copyright  genl-packet-dev.install  genl-packet-generator.install  genl-packet-sniffer.install  genl-packet-so.install  genlpacket.cron.d.ex  genlpacket.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
genl-packet/: BUILD.bazel  generator.cc  receive_genetlink.cc  sniffer.cc  sniffer.h
genl-packet-module/config/: genl-packet-module.conf
genl-packet-module/debian/: changelog  control  copyright  install  rules
genl-packet-module/modules/: Makefile  genl_packet.c  genl_packet.mod
genl-packet-tools/: Makefile
genl-packet-tools/debian/: changelog  control
genl-packet-tools/genl-packet/: BUILD.bazel  generator.cc  sniffer.cc
kernel_module/: .Module.symvers.cmd  .kernel_group.ko.cmd  .kernel_group.mod.cmd  .kernel_group.mod.o.cmd  .kernel_group.o.cmd  .modules.order.cmd  Makefile
libgenl-packet/: Makefile
libgenl-packet/debian/: README.source  control  libgenl-packet-dev.dirs  libgenl-packet-dev.install  libgenl-packet-dev.links  rules
libgenl-packet/genl-packet/: BUILD.bazel  prepare_netlink.h  receive_genetlink.h
libgenl-packet/genl-packet/uapi/linux/: genl-packet.h
