# Copyright 2022 Open Networking Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

workspace(name = "com_github_pins_genl_packet")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_github_gflags_gflags",
    remote = "https://github.com/gflags/gflags.git",
    commit = "e171aa2d15ed9eb17054558e0b3a6a413bb01067", 
    shallow_since = "1541971260 +0000",
)

git_repository(
    name = "sonic_swss_common",
    commit = "5ba5100f750de723b53aa01e097c2d5899107717",
    remote = "git@github.com:pins/sonic-swss-common.git",
    shallow_since = "1616719037 -0700",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
      name = "com_github_pcapplusplus",
      urls = ["https://github.com/seladb/PcapPlusPlus/archive/refs/heads/master.zip"],
      build_file = "@//:ppp.BUILD",
      strip_prefix = "PcapPlusPlus-master",
  )

http_archive(
    name = "com_github_google_glog",
    sha256 = "21bc744fb7f2fa701ee8db339ded7dce4f975d0d55837a97be7d46e8382dea5a",
    strip_prefix = "glog-0.5.0",
    urls = ["https://github.com/google/glog/archive/v0.5.0.zip"],
)
