package(default_visibility = ["//visibility:public"])

licenses(["notice"])
exports_files(["LICENSE"])

cc_binary(
    name = "sniffer",
    srcs = ["sniffer.cc"],
    deps = [
        "receive_genl",
        "@com_github_pcapplusplus//:pcap",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
    ],
    data = glob(["*.pcap"]),
)

cc_library( 
    name = "receive_genl",
    srcs = ["receive_genetlink.cc", ],
    copts = ["-I/usr/include/libnl3"],
    linkopts = [
        "-lnl-3",
        "-lnl-genl-3",
        "-lnl-nf-3",
        "-lnl-route-3",
    ], 
    hdrs = ["receive_genetlink.h","uapi/linux/genl-packet.h", "prepare_netlink.h",],
    deps = [
       "@com_github_google_glog//:glog",
    ],
)

cc_binary(
    name = "generator",
    srcs = ["generator.cc"],
    deps = [
        "@com_github_pcapplusplus//:pcap",
        "@com_github_gflags_gflags//:gflags",
        "receive_genl",
    ],
    copts = [
        "-I",
        "/usr/include/libnl3/",
    ],
    linkopts = [
        "-lnl-3",
        "-lnl-genl-3",
        "-lnl-nf-3",
        "-lnl-route-3",
    ],
)
